2013-05-30  Dirk Schulze  <dschulze@adobe.com>
	Prepare document for publication.

2013-05-30  Dirk Schulze  <dschulze@adobe.com>
	Add link to test suite.

2013-05-29  Dirk Schulze  <dschulze@adobe.com>
	Add note and issue that 'mask: none' does not influence 'mask-box-image'.

2013-05-22  Dirk Schulze  <dschulze@adobe.com>
	Clarify interaction with Visual Effects module from CSS 2.1.
	Restrict masks and clipping paths not to apply to defs elements.
	Add issue to fix security model.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Clarify when a stacking context gets created.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Clarify the difference of 'mask-type' and 'mask-source-type'. Added an example.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Remove <clip-box>; use [ <box> | no-clip ] instead.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Update presentation attribute style with property style.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Experimental change of style of element names.

2013-04-04  Dirk Schulze  <dschulze@adobe.com>
	After further checking, everything that would require SVG2 was removed.
	Switching from SVG2 to SVG11 everywhere.

2013-04-04  Dirk Schulze  <dschulze@adobe.com>
	Update references to SVG2 and CSS Exclusions.

2013-04-04  Dirk Schulze  <dschulze@adobe.com>
	Reference value definitions of CSS Background and Borders.

2013-04-04  Dirk Schulze  <dschulze@adobe.com>
	Change titles from Mask to Layered Masks and Mask Box Image to Box-Image Masks.

2013-04-03  Dirk Schulze  <dschulze@adobe.com>
	Move section 'The Mask Image Rendering Model' to 'Mask'

2013-04-03  Dirk Schulze  <dschulze@adobe.com>
	Move visible effect paint order definition to module interaction.

2013-04-03  Dirk Schulze  <dschulze@adobe.com>
	Incorporated more feedback from fantasai:
	- fixed definition of child
	- fixed definition of select()
	- clarify behavior on invalid URI
	- editorial changes

2013-04-02  Dirk Schulze  <dschulze@adobe.com>