@@ -315,7 +315,7 @@ below.)
 
 <dl>
   <dt>
-    <dfn>'&lt;url&gt;'</dfn>
+    <dfn>&lt;url&gt;</dfn>
   </dt>
   <dd>
     A URL reference to a <a>'mask element'</a> element (for example ''url(commonmasks.svg#mask)'').
@@ -325,13 +325,13 @@ below.)
     A keyword to indicate that the last direct child <a>'mask element'</a>
     element of the element the 'mask-image' property is applied should be used as the mask source. It is equivalent to
     ''select(mask:last-of-type)''.</dd>
-  <dt>'&lt;child-selector&gt;'</dt>
+  <dt>&lt;child-selector&gt;</dt>
   <dd>
     A functional notation [[!CSS3VAL]] accepting a comma-separated
     list of compound selectors that represents first matching child
     <a>'mask element'</a> element in <a>tree order</a> (as defined in [[!DOM]]).
     <dl>
-      <dt><dfn>'&lt;compound-selector&gt;'</dfn></dt>
+      <dt><dfn>&lt;compound-selector&gt;</dfn></dt>
       <dd>
         A <a>compound selector</a> as defined in [[!SELECTORS4]].
       <dd>
@@ -840,9 +840,7 @@ layer.
   'mask-size' have no affect on <a>'mask element'</a> elements.
 </p>
 
-<p class="note">The 'mask' property does not influence the 'mask-box-image' properties. ''mask: none'' does not remove any masking definition of 'mask-box-image'.</p>
-
-<p class="issue">Shall ''mask: none'' influence 'mask-box-image'? This would mean to "link" the both shorthand properties.</p>
+<p class="note">The 'mask' property does not influence the 'mask-box-image' properties. ''mask: none'' does not remove any masking defined by 'mask-box-image'.</p>
 
 <h3 id="the-mask-type">The 'mask-type' property</h3>
 
@@ -1509,7 +1507,7 @@ create a <var>clipping path</var>.
 
 <dl>
   <dt>
-    <dfn>'&lt;basic-shape&gt;'</dfn>
+    <dfn>&lt;basic-shape&gt;</dfn>
   </dt>
   <dd>
     A <a href="http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/#supported-svg-shapes">basic shape function</a> as defined in CSS3 Exclusions. The origin of clipping shapes is on the top left of the <span
@@ -1521,7 +1519,7 @@ create a <var>clipping path</var>.
     A keyword to indicate that the last direct child <a>'clipPath element'</a>
     element of the element the 'clip-path' property is applied should be used as the clip source. It is equivalent to
     ''select(clipPath:last-of-type)''.</dd>
-  <dt>'&lt;child-selector&gt;'</dt>
+  <dt>&lt;child-selector&gt;</dt>
   <dd>
     A functional notation [[!CSS3VAL]] accepting a comma-separated
     list of compound selectors that represents first matching child
