@@ -613,7 +613,7 @@
    below.)
 
   <dl>
-   <dt> <dfn id=lturlgt>‘<code class=css>&lt;url&gt;</code>’</dfn>
+   <dt> <dfn id=lturlgt>&lt;url&gt;</dfn>
 
    <dd> A URL reference to a <a href="#MaskElement"><code
     class=element-name>&lt;mask></code></a> element (for example ‘<code
@@ -628,8 +628,7 @@
     used as the mask source. It is equivalent to ‘<code
     class=css>select(mask:last-of-type)</code>’.
 
-   <dt>‘<a href="#ltchild-selectorgt"><code
-    class=css>&lt;child-selector&gt;</code></a>’
+   <dt>&lt;child-selector&gt;
 
    <dd> A functional notation <a href="#CSS3VAL"
     rel=biblioentry>[CSS3VAL]<!--{{!CSS3VAL}}--></a> accepting a
@@ -640,8 +639,7 @@
     order</a> (as defined in <a href="#DOM"
     rel=biblioentry>[DOM]<!--{{!DOM}}--></a>).
     <dl>
-     <dt><dfn id=ltcompound-selectorgt>‘<code
-      class=css>&lt;compound-selector&gt;</code>’</dfn>
+     <dt><dfn id=ltcompound-selectorgt>&lt;compound-selector&gt;</dfn>
 
      <dd> A <a href="http://dev.w3.org/csswg/selectors4/#compound">compound
       selector</a> as defined in <a href="#SELECTORS4"
@@ -1432,13 +1430,8 @@ body {
    class=property>mask</code></a>’ property does not influence the ‘<a
    href="#mask-box-image"><code class=property>mask-box-image</code></a>’
    properties. ‘<code class=css>mask: none</code>’ does not remove any
-   masking definition of ‘<a href="#mask-box-image"><code
+   masking defined by ‘<a href="#mask-box-image"><code
    class=property>mask-box-image</code></a>’.
-
-  <p class=issue>Shall ‘<code class=css>mask: none</code>’ influence
-   ‘<a href="#mask-box-image"><code
-   class=property>mask-box-image</code></a>’? This would mean to "link" the
-   both shorthand properties.
 
   <h3 id=the-mask-type><span class=secno>5.9. </span>The ‘<a
    href="#mask-type"><code class=property>mask-type</code></a>’ property</h3>
@@ -2794,8 +2787,7 @@ div {
 </pre>
 
   <dl>
-   <dt> <dfn id=ltbasic-shapegt>‘<code
-    class=css>&lt;basic-shape&gt;</code>’</dfn>
+   <dt> <dfn id=ltbasic-shapegt>&lt;basic-shape&gt;</dfn>
 
    <dd> A <a
     href="http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/#supported-svg-shapes">basic
@@ -2816,8 +2808,7 @@ div {
     as the clip source. It is equivalent to ‘<code
     class=css>select(clipPath:last-of-type)</code>’.
 
-   <dt>‘<a href="#ltchild-selectorgt"><code
-    class=css>&lt;child-selector&gt;</code></a>’
+   <dt>&lt;child-selector&gt;
 
    <dd> A functional notation <a href="#CSS3VAL"
     rel=biblioentry>[CSS3VAL]<!--{{!CSS3VAL}}--></a> accepting a
@@ -4421,8 +4412,8 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <li>‘<code class=css>auto</code>’, <a href="#auto"
     title="section 5.2."><strong>5.2.</strong></a>
 
-   <li>‘<code class=css>&lt;basic-shape&gt;</code>’, <a
-    href="#ltbasic-shapegt" title="section 7.1."><strong>7.1.</strong></a>
+   <li>&lt;basic-shape&gt;, <a href="#ltbasic-shapegt"
+    title="section 7.1."><strong>7.1.</strong></a>
 
    <li>''border-box''
     <ul>
@@ -4460,8 +4451,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <li>&lt;clip-source&gt;, <a href="#ltclip-sourcegt"
     title="section 7.1."><strong>7.1.</strong></a>
 
-   <li>‘<code class=css>&lt;compound-selector&gt;</code>’, <a
-    href="#ltcompound-selectorgt"
+   <li>&lt;compound-selector&gt;, <a href="#ltcompound-selectorgt"
     title="section 5.1."><strong>5.1.</strong></a>
 
    <li>''content-box''
@@ -4614,7 +4604,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <li>&lt;top&gt;, <a href="#lttopgt"
     title="section 7.3."><strong>7.3.</strong></a>
 
-   <li>‘<code class=css>&lt;url&gt;</code>’, <a href="#lturlgt"
+   <li>&lt;url&gt;, <a href="#lturlgt"
     title="section 5.1."><strong>5.1.</strong></a>
 
    <li>user coordinate system, <a href="#user-coordinate-system"
