@@ -1,4 +1,7 @@
 2013-05-30  Dirk Schulze  <dschulze@adobe.com>
+	Remove issue about 'mask: none' as suggested on www-style.
+
+2013-05-30  Dirk Schulze  <dschulze@adobe.com>
 	Prepare document for publication.
 
 2013-05-30  Dirk Schulze  <dschulze@adobe.com>
